--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "populate-env",
   "version": "1.0.0",
   "description": "Populate a given object from process.env with default value and types.",
-  "main": "index.js",
-  "scripts": {
-    "test": "tsc --noEmit",
-    "build": "tsc -p ."
-  },
   "keywords": [
     "env",
     "environment",
@@ -15,11 +10,20 @@
   ],
   "author": "Beeno Tung <aabbcc1241@yahoo.com.hk> (https://beeno-tung.surge.sh)",
   "license": "BSD-2-Clause",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "files": [
+    "index.js",
+    "index.d.ts"
+  ],
+  "scripts": {
+    "test": "tsc --noEmit",
+    "build": "tsc -p ."
+  },
   "devDependencies": {
     "@types/node": "^17.0.21",
     "ts-node": "^10.5.0",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
-  },
-  "types": "./index.d.ts"
+  }
 }
