--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "incremental": true
+    "incremental": false
   }
 }
